[package]
name = "avatarapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tower = "0.4.13"
anyhow = "1.0.75"
csv = "1.3.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
