[package]
name = "avatarapi"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tower = "0.4.13"
anyhow = "1.0.75"
tracing = "0.1.37" 
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]} 
nutype = { version = "0.4.0", features = ["serde"]}
