[package]
name = "avatarapi"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
tower = "0.5.2"
anyhow = "1.0.95"
tracing = "0.1.41"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite" ] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]} 
nutype = { version = "0.6.1", features = ["serde"]}
csv = "1.3.1"
http = "1.2.0"
